--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -62,6 +62,8 @@ $sub-footer-text-color: $white;
 @import "pages/page-teams";
 @import "pages/page-service";
 
+@import "notebook-code";
+
 body {
   font-size: 16px;
   line-height: 1.2;
